<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_card_title">About %s</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="account_disambiguation_dialog_title">Choose account to share from</string>
    <string name="account_drop_down_info">&lt;font color=\"#dd000000\"> %1$s &lt;/font> &lt;font color=\"#C1C1C1\" face=\"sans-serif\"> • &lt;/font> &lt;font color=\"#757575\" face=\"sans-serif\"> %2$s &lt;/font></string>
    <string name="account_filter_view_checked">%s checked</string>
    <string name="account_filter_view_not_checked">%s not checked</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="account_phone">Device</string>
    <string name="account_search_header_format">%1$s • %2$s</string>
    <string name="account_sim">SIM</string>
    <string name="account_sync_off">Account sync is off. Tap to turn on.</string>
    <string name="action_always">ALWAYS</string>
    <string name="action_just_once">JUST ONCE</string>
    <string name="action_menu_add_new_contact_button">Create contact</string>
    <string name="action_menu_back_from_edit_select">close</string>
    <string name="activity_title_contacts_filter">Contacts to display</string>
    <string name="activity_title_settings">Settings</string>
    <string name="add_account">Add account</string>
    <string name="add_contact_dlg_message_fmt">Add \"%s\" to contacts?</string>
    <string name="add_info_assistant_accept">Accept</string>
    <string name="add_info_assistant_apply_all">Accept All</string>
    <string name="add_info_assistant_apply_all_message">It may be a few minutes before you see these changes on your device. You can continue using your device in the meantime.</string>
    <string name="add_info_assistant_error_message">Error adding to contact</string>
    <string name="add_info_assistant_from_gmail">From Gmail</string>
    <string name="add_info_assistant_header">(No name)</string>
    <string name="add_info_assistant_item_resolved">Contact updated</string>
    <string name="add_info_assistant_menu_title">New contact information</string>
    <string name="add_info_assistant_progress_title">Adding contact information…</string>
    <string name="add_info_assistant_summary_title">Keep contacts up to date</string>
    <string name="add_info_assistant_view_gmail">View Email</string>
    <string name="add_info_assistant_view_gmail_error">There was a problem viewing the email</string>
    <string name="add_names">Add names</string>
    <string name="add_new_account">Add new account</string>
    <string name="add_starred_contacts">Add starred contacts</string>
    <string name="add_to_label_canceled">Add to label canceled</string>
    <string name="address_autocomplete_accessibility">Dispaying address autocomplete suggestions</string>
    <string name="address_set_default_dialog_header">Address</string>
    <string name="allContactsList">All contacts</string>
    <string name="announce_collapsed_fields">Collapsed</string>
    <string name="announce_expanded_fields">Expanded</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Contacts</string>
    <string name="assistant_card_dismissed">Dismissed</string>
    <string name="assistant_card_menu_content_description">More options for %s</string>
    <string name="assistant_cleanup_all_completed">No junk email addresses left in your contacts</string>
    <string name="assistant_cleanup_header">Delete junk email addresses</string>
    <string name="assistant_dismiss_button">Dismiss</string>
    <string name="assistant_dismissed_snackbar">Suggestion dismissed</string>
    <string name="assistant_duplicates_header">Merge duplicates</string>
    <string name="assistant_empty_text">No new suggestions</string>
    <string name="assistant_loading_content_description">Loading suggestions</string>
    <string name="assistant_menu_deselect_all_text">Deselect all</string>
    <string name="assistant_menu_select_all_text">Select all</string>
    <string name="assistant_no_name_all_completed">No more contact name suggestions</string>
    <string name="assistant_no_name_summary_card_title">Add missing names</string>
    <string name="assistant_no_network_error">No connection</string>
    <string name="assistant_recommendations_item_add">Add contact</string>
    <string name="assistant_recommendations_item_added">Contact added</string>
    <string name="assistant_recommendations_item_name">Maybe: %s</string>
    <string name="assistant_suggestion_not_selected">Suggestion unchecked</string>
    <string name="assistant_suggestion_selected">Suggestion checked</string>
    <string name="assistant_undo_snackbar">Undo</string>
    <string name="assistant_view_snackbar">View</string>
    <string name="assistant_welcome_body">Easy ways to add new contacts, clean up duplicates, and more</string>
    <string name="assistant_welcome_dismiss">Got it</string>
    <string name="assistant_welcome_header">Welcome to your suggestions</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="auto_sync_off">Auto-sync is off. Tap to turn on.</string>
    <string name="back_arrow_content_description">Navigate up</string>
    <string name="backup_assistant_backup_added_snackbar">Backup account added</string>
    <string name="backup_assistant_confirm_button">Back up</string>
    <string name="backup_assistant_dismiss_confirmation_message">"If something happens to this device, you won't be able to view, search, and edit your phone contacts with your Google Account."</string>
    <string name="backup_assistant_dismiss_dialog_title">"Don't back up?"</string>
    <string name="backup_assistant_ignore_button">"Don't back up"</string>
    <string name="backup_assistant_message">Add a Google Account to back up your contacts, in case something happens to your device</string>
    <string name="backup_assistant_title">Back up your contacts</string>
    <string name="batch_delete_confirmation">Delete selected contacts?</string>
    <string name="browser_not_found">No browser was found.</string>
    <string name="caching_vcard_message">Caching vCard(s) to local temporary storage. The actual import will start soon.</string>
    <string name="caching_vcard_title">Caching</string>
    <string name="callDurationHourFormat">%1$s hr %2$s min %3$s sec</string>
    <string name="callDurationMinuteFormat">%1$s min %2$s sec</string>
    <string name="callDurationSecondFormat">%s sec</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_by_shortcut">%s (Call)</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_custom">Call %s</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_home">Call home</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_main">Call main</string>
    <string name="call_mms">Call MMS</string>
    <string name="call_mobile">Call mobile</string>
    <string name="call_other">Call</string>
    <string name="call_other_fax">Call fax</string>
    <string name="call_pager">Call pager</string>
    <string name="call_quick_action_label">Call</string>
    <string name="call_radio">Call radio</string>
    <string name="call_subject_hint">Type a note to send with call…</string>
    <string name="call_subject_limit">%1$d / %2$d</string>
    <string name="call_subject_type_and_number">%1$s • %2$s</string>
    <string name="call_telex">Call telex</string>
    <string name="call_tty_tdd">Call TTY/TDD</string>
    <string name="call_with_a_note">Call with a note</string>
    <string name="call_work">Call work</string>
    <string name="call_work_mobile">Call work mobile</string>
    <string name="call_work_pager">Call work pager</string>
    <string name="cancel_confirmation_dialog_discard">Discard</string>
    <string name="cancel_confirmation_dialog_message">Your changes have not been saved</string>
    <string name="cancel_confirmation_dialog_save">Save</string>
    <string name="cancel_export_confirmation_message">Cancel export of %s?</string>
    <string name="cancel_import_confirmation_message">Cancel import of %s?</string>
    <string name="cancel_vcard_import_or_export_failed">"Couldn't cancel vCard import/export"</string>
    <string name="canceling_status">Canceling…</string>
    <string name="change_account_expander_content_description">Change account</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat">Chat</string>
    <string name="chat_aim">Chat using AIM</string>
    <string name="chat_gtalk">Chat using Google Talk</string>
    <string name="cleanup_wizard_end_close_button">Close</string>
    <string name="cleanup_wizard_end_suggestions_referral">Find ways to make your contacts even more useful in the Suggestions menu</string>
    <string name="cleanup_wizard_no_suggestions_header">Your contacts already look great</string>
    <string name="description_clear_search">Clear search</string>
    <string name="existing_name">Existing name</string>
    <string name="search_font_family">sans-serif</string>
    <string name="undo_changes_choices">Undo changes from</string>
    <string name="undo_changes_custom_rollback_days">Days</string>
    <string name="undo_changes_custom_rollback_hours">Hours</string>
    <string name="undo_changes_custom_rollback_invalid">Enter a time period within the past 30 days.</string>
    <string name="undo_changes_custom_rollback_minutes">Minutes</string>
    <string name="undo_changes_description">Change your contacts list back to any state in the past 30 days</string>
    <string name="undo_changes_learn_more">Learn more</string>
    <string name="undo_changes_radio_custom">Custom</string>
    <string name="undo_changes_radio_one_day">Yesterday</string>
    <string name="undo_changes_radio_one_hour">1 hr ago</string>
    <string name="undo_changes_radio_one_week">1 week ago</string>
    <string name="undo_changes_radio_ten_min">10 min ago</string>
</resources>