<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_box_expanded" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/search_back_button" android:background="?selectableItemBackgroundBorderless" android:layout_width="@dimen/search_box_icon_size" android:layout_height="@dimen/search_box_icon_size" android:src="@drawable/quantum_ic_arrow_back_vd_theme_24" android:tint="?colorAccent" android:contentDescription="@string/back_arrow_content_description" android:layout_marginEnd="@dimen/search_box_navigation_icon_margin" />
    <android.widget.AutoCompleteTextView android:textSize="@dimen/search_text_size" android:textColor="?android:textColorPrimary" android:id="@id/search_view" android:background="@null" android:layout_width="0.0dip" android:layout_height="@dimen/search_box_icon_size" android:layout_marginLeft="@dimen/search_box_text_left_margin" android:singleLine="true" android:layout_weight="1.0" android:inputType="textFilter" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="@drawable/searchedittext_custom_cursor" android:fontFamily="@string/search_font_family" />
    <ImageView android:id="@id/search_close_button" android:background="?selectableItemBackgroundBorderless" android:padding="@dimen/search_box_close_icon_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/search_box_close_icon_size" android:layout_height="@dimen/search_box_close_icon_size" android:src="@drawable/quantum_ic_close_vd_theme_24" android:tint="?android:textColorSecondary" android:contentDescription="@string/description_clear_search" />
</LinearLayout>