<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/cleanup_wizard_no_suggestions_footer" android:layout_alignParentTop="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/cleanup_wizard_no_suggestions_image" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="24.0dip" android:src="@drawable/cleanup_icon" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:id="@id/cleanup_wizard_no_suggestions_header" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cleanup_wizard_no_suggestions_header" android:layout_below="@id/cleanup_wizard_no_suggestions_image" android:layout_centerHorizontal="true" android:paddingStart="@dimen/cleanup_wizard_leftRight_padding" android:paddingEnd="@dimen/cleanup_wizard_leftRight_padding" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cleanup_wizard_end_suggestions_referral" android:layout_below="@id/cleanup_wizard_no_suggestions_header" android:paddingStart="@dimen/cleanup_wizard_leftRight_padding" android:paddingEnd="@dimen/cleanup_wizard_leftRight_padding" />
        </RelativeLayout>
    </ScrollView>
    <com.google.android.apps.contacts.wizard.CleanupWizardFooterView android:id="@id/cleanup_wizard_no_suggestions_footer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:continueText="@string/cleanup_wizard_end_close_button" app:hideSkip="true" style="@style/AssistantListFooter" />
</RelativeLayout>